--- a/mobPartnerPublisherSDKSample/res/values/strings.xml
+++ b/mobPartnerPublisherSDKSample/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">mobPartnerPublisherSDKSample</string>
     <string name="action_settings">Settings</string>
     <string name="interstitial_show">Show Interstitial</string>
-    <string name="refresh_banner">Refresh Banner</string>
+    <string name="show_banner">Show Banner</string>
+    <string name="show_mobstream">Show MobStream</string>
     <string name="mobpartner">MobPartner</string>
     <string name="PoolID">PoolID: </string>
     <string name="mobWall">MobWall </string>
